preload google fonts

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <meta name="Description" content="The homepage of Shane Exterkamp.">
         <link rel="manifest" href="manifest.json">
         <link rel="shortcut icon" href="favicon.ico">
+        <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" as="style" crossorigin>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
         <title>Extra-Camp</title>
         <link rel="apple-touch-icon" href="static/img/headshot_dithered.png">
