--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
         <title>Extra-Camp</title>
         <link rel="apple-touch-icon" href="static/img/headshot_dithered.png">
+        <link rel="preload" href="styles/index.css" as="style">
         <link rel="stylesheet" href="styles/index.css">
     </head>
     <body>
