--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
         <title>Extra-Camp</title>
         <link rel="apple-touch-icon" href="static/img/headshot_dithered.png">
-<!--         <link rel="preload" href="styles/index.css" as="style"> -->
-<!--         <link rel="stylesheet" href="styles/index.css"> -->
+        <link rel="stylesheet" href="styles/index.css">
     </head>
     <body>
         <main style="display: flex;min-height: 100vh;flex-direction: column;justify-content: center;">
