--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         <meta name="Description" content="The homepage of Shane Exterkamp.">
         <link rel="manifest" href="manifest.json">
         <link rel="shortcut icon" href="favicon.ico">
-        <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" as="style" crossorigin>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+        <link rel="preload" href="https://fonts.gstatic.com/s/opensans/v29/memSYaGs126MiZpBA-UvWbX2vVnXBbObj2OVZyOOSr4dVJWUgsjZ0B4gaVQUwaEQbjA.woff" as="font" type="font/woff2" crossorigin>
         <title>Extra-Camp</title>
         <link rel="apple-touch-icon" href="static/img/headshot_dithered.png">
         <link rel="stylesheet" href="styles/index.css">
