--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
                 <p>
                     My online prescence: 
                     <a href=https://github.com/exterkamp>Github</a>,
-                    <a href=https://www.linkedin.com/in/shane-exterkamp>Linkedin</a>,
-                    <a href=http://facebook.com/shane.exterkamp>Facebook</a>,
-                    <a href=https://www.instagram.com/exterkamps_>Instagram</a>
+                    <a href=https://www.linkedin.com/in/shane-exterkamp>Linkedin</a>
                 </p>
             </div>
             <div>
