Update index.html 2 Fi

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div>
                 <h2>What do I do?</h2>
                 <p>
-                    I work at Google<!--TODO(exterkamp): make a stock ticker -->, on Chrome, 
+                    I work at Google<!--TODO(exterkamp): make a stock ticker -->, on <a href="https://fi.google.com/">Google Fi</a>, previously on Chrome, 
                     focusing on web performance with <a href=https://github.com/GoogleChrome/lighthouse>Lighthouse</a>
                     and <a href="https://developers.google.com/speed/pagespeed/insights/">Pagespeed Insights</a>.
                 </p>
@@ -77,7 +77,7 @@
                     <li><a href=https://github.com/AstroTeam/Astro>Astro, a roguelike in space</a></li>
                 </ul>
                 <!-- TODO(exterkamp): make an infinite music scroll -->
-                <footer>✌️&nbsp;<i>2020</i></footer>
+                <footer>✌️&nbsp;<i>2025</i></footer>
             </div>
         </main>
         <script>
