Add color link.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                 <p>
                     <a href=https://encode.exterkamp.codes>Text encoding tool.</a>
                 </p>
+                <p>
+                    <a href=https://colors.exterkamp.codes>HTML named colors.</a>
+                </p>
                 <h2>Things I've Made/Done</h2>
                 <h3>Code</h3>
                 <ul>
