--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             <div>
                 <h2>What do I do?</h2>
                 <p>
-                    I work at Google<!--TODO(exterkamp): make a stock ticker --> Deepmind, on generative AI,
-                    I previously worked on <a href="https://fi.google.com/">Google Fi</a>; and on Chrome, 
+                    I work at Google<!--TODO(exterkamp): make a stock ticker --> Deepmind on generative AI;
+                    I previously worked on <a href="https://fi.google.com/">Google Fi</a> and on Chrome,
                     focusing on web performance with <a href=https://github.com/GoogleChrome/lighthouse>Lighthouse</a>
                     and <a href="https://developers.google.com/speed/pagespeed/insights/">Pagespeed Insights</a>.
                 </p>
